single resume event per thread, multiple external events